--- a/참고_퍼셉트론_한계지적.md
+++ b/참고_퍼셉트론_한계지적.md
@@ -15,6 +15,7 @@ def sigmoid(x):
 
 #### 2. 첫 번째 신경망 네트워크 AND를 만들어보자. 
 ```python
+# 첫 번째 신경망 네트워크 : AND
 x = np.array([[1,1],[1,0],[0,1],[0,0]])
 y = np.array([[1], [0], [0], [0]])
 w = tf.random.normal([2],0,1)
@@ -58,6 +59,7 @@ X: [0 0] Y: [0] Output: 2.3605033365351133e-05
 
 #### 3. 두 번째 신경망 네트워크 OR을 만들어보자. 
 ```python
+# 두 번째 신경망 네트워크 : OR
 x = np.array([[1,1],[1,0],[0,1],[0,0]])
 y = np.array([[1],[1],[1],[0]])
 w = tf.random.normal([2],0,1)
@@ -102,6 +104,7 @@ X: [0 0] Y: [0] Output: 0.025769302574021546
 
 #### 4. 세 번째 신경망 네트워크 XOR을 만들어보자. 
 ```python
+# 세 번째 신경망 네트워크 : XOR
 x = np.array([[1,1], [1,0], [0,1], [0,0]])
 y = np.array([[0], [1], [1], [0]])
 w = tf.random.normal([2],0,1)
@@ -146,6 +149,7 @@ X: [0 0] Y: [0] Output: 0.5000000009313226
 
 #### 5. 신경망 네트워크 XOR을 tf.keras를 이용하여 만들어보자
 ```python
+# tf.keras를 이용한 XOR 네트워크 연산
 x = np.array([[1,1], [1,0], [0,1], [0,0]])
 y = np.array([[0],[1],[1],[0]])
 
