Update and rename 참고_퍼셉트론_한계지적.md to 2_2장_퍼셉트론_한계지적.md

--- a/2_2장_퍼셉트론_한계지적.md
+++ b/2_2장_퍼셉트론_한계지적.md
@@ -56,6 +56,7 @@ X: [1 0] Y: [0] Output: 0.02482694744439901
 X: [0 1] Y: [0] Output: 0.024902606770609598
 X: [0 0] Y: [0] Output: 2.3605033365351133e-05
 ```
+* 각 실제출력이 기대출력에 가까이 나오는 것을 확인할 수 있습니다.
 
 #### 3. 두 번째 신경망 네트워크 OR을 만들어보자. 
 ```python
@@ -101,6 +102,7 @@ X: [1 0] Y: [1] Output: 0.9896936211856563
 X: [0 1] Y: [1] Output: 0.9896728222316397
 X: [0 0] Y: [0] Output: 0.025769302574021546
 ```
+* 각 실제출력이 기대출력에 가까이 나오는 것을 확인할 수 있습니다.
 
 #### 4. 세 번째 신경망 네트워크 XOR을 만들어보자. 
 ```python
@@ -146,8 +148,13 @@ X: [1 0] Y: [1] Output: 0.5128176305326305
 X: [0 1] Y: [1] Output: 0.4999999990686774
 X: [0 0] Y: [0] Output: 0.5000000009313226
 ```
+* 각 실제출력이 기대출력에 가까이 가지못한 것을 볼수있습니다, 위의 AND와 OR과는 다르게 실제출력 값이 0.5에 다 가까이 나오게 됩니다.
+* 이것이 바로 첫번째 인공지능의 겨울이라는 불러온 것으로 잘 알려진 XOR 문제입니다.
+* 하나의 퍼셉트론으로는 간단한 XOR 연상자도 만들어 낼 수 없다는 것을 증명했습니다.
 
 #### 5. 신경망 네트워크 XOR을 tf.keras를 이용하여 만들어보자
+* tf.keras에는 딥러닝 계산을 간편하게 하기 위한 추상적인 클래스인 model이 있습니다, 쉽게 말해서 딥러닝 계산을 위한 여러함수오 변수의 묶음이라고 생각하면 됩니다.
+* model은 tf.keras에서 딥러닝을 계산하는 가장 핵심적인 단위입니다.
 ```python
 # tf.keras를 이용한 XOR 네트워크 연산
 x = np.array([[1,1], [1,0], [0,1], [0,0]])
@@ -176,6 +183,16 @@ Trainable params: 9
 Non-trainable params: 0
 _________________________________________________________________
 ```
+* model에서 가장 많이 쓰이는 구조가 tf.keras.Sequential 구조입니다, 이것은 순차적으로 뉴런과 뉴런이 합쳐진 단위인 레이어를 일직선으로 배치한 것입니다.
+* tf.keras.layers.Dense는 model에서 사용하는 레이어를 정의하는 명령입니다, Dense는 가장 기본적인 레이어로서, 레이어의 입력과 출력사이에 있는 모든 뉴런이 서로 연결되는 레이어입니다.
+* tf.keras.layers.Dense 안의 units는 레이어를 구성하는 뉴런의 수를 정의합니다, 뉴런이 많을수록 일반적으로 레이어의 성능은 좋아지지만 계산량 또한 많아지고 메모리도 많이 차지하게 됩니다.
+* tf.keras.layers.Dense 안의 activation은 우리가 계속 봐 온 활성화함수입니다.
+* tf.keras.layers.Dense 안의 input_shape은 Sequential model의 첫 번째 레이어에서만 정의하는데, 입력의 차원 수가 어떻게 되는지를 정의합니다.
+* 최적화 함수(optimizer)는 딥러닝의 학습식을 정의하는 부분입니다, 원래는 복잡한 수학을 써야 하지만, tf.keras에서는 이렇게 미리 정의된 최적화 함수를 불러오는것으로 바로 사용할 수 있습니다.
+* SGD는 확률적 경사 하강법의 약자이며, 가중치를 업데이트할 때 미분을 통해 기울기를 구한 다음 기울기가 낮은 쪽으로 업데이트 하겠다는 뜻이고, 확률적은 전체를 한번에 계산하지 않고 확률적으로 일부 샘플을 구해서 조금씩으로 나눠서 계산하겠다는 뜻입니다.
+* 손실(loss)은 앞에서 살펴본 error와 비슷한 개념입니다, 딥러닝은 보통 이 손실을 줄이는 방향으로 학습합니다.
+* mse는 평균 제곱 오차의 약자로, 기대출력에서 실제출력을 뺀 뒤에 제곱한 값을 평균하는 것입니다.
+
 ```python
 # tf.keras를 이용한 2-레이어 XOR 네트워크 학습
 history = model.fit(x, y, epochs=2000, batch_size=1)
@@ -201,6 +218,8 @@ Epoch 1999/2000
 Epoch 2000/2000
 4/4 [==============================] - 0s 1ms/step - loss: 0.0913
 ```
+* model.fit() 함수는 for문을 실해하는 것처럼 에포크(epochs)에 지정된 횟수만큼 학습시킵니다.
+* batch_size는 한번에 학습시키는 데이터의 수인데, 여기서는 1로 지정해서 입력을 넣었을 때 정확한 값을 출력하는지 알아보려고 합니다.
 ```python
 # tf.keras를 이용한 2-레이어 XOR 네트워크 평가
 model.predict(x)
@@ -211,3 +230,5 @@ model.predict(x)
        [0.6281929 ],
        [0.3015707 ]], dtype=float32)
 ```
+* model.predict() 함수에 입력을 넣으면 네트워크의 출력 결과를 알 수 있습니다.
+* 결과를 봤을때 기대출력에 가까운 값이 출력 되는 것을 볼 수 있습니다.
