--- a/2_2장_퍼셉트론_한계지적.md
+++ b/2_2장_퍼셉트론_한계지적.md
@@ -1,4 +1,4 @@
-## 퍼셉트론의 한계지적
+## 2_2. 퍼셉트론의 한계지적
 ### 소개
 * 뉴런의 원조격인 퍼셉트론의 한계 지적에서 쓰인 AND, OR, XOR 연산을 할 수 있는 신경망 네트워크를 만들어봅시다.
 ### 퍼셉트론의 한계 지적에서 쓰인 AND,OR,XOR 연산 신경망 네트워크 
